adding url scheme

--- a/_config.yaml
+++ b/_config.yaml
@@ -3,6 +3,8 @@ safe: true
 source: /docs
 incremental: false
 highlighter: rouge
+url: "https://GinoAC.github.io"
+baseurl: "/docs/"
 gist:
   noscript: false
 kramdown:
