--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -3,8 +3,10 @@ description: My personal site to blog about architecture, coding, hacking, books
 
 url: "https://GinoAC.github.io"
 baseurl: "/docs"
-
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: minima
+markdown: kramdown
+highlighter: rouge
+#remote_theme: pages-themes/slate@v0.2.0
+#plugins:
+#- jekyll-remote-theme # add this line to the plugins list if you already have one
 excerpt_separator: "<!--more-->"
