--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,11 +1,13 @@
 title: Gino's Site
 description: My personal site to blog about architecture, coding, hacking, books, the outdoors, and whatever has caught my bucaneer fancy.
 
+remote_theme: pages-themes/slate@v0.2.0
+
+plugins:
+  - jekyll-remote-theme
+
 url: "https://GinoAC.github.io"
 baseurl: "/GinoAC.github.io"
-theme: minima
-markdown: kramdown
-highlighter: rouge
 #remote_theme: pages-themes/slate@v0.2.0
 #plugins:
 #- jekyll-remote-theme # add this line to the plugins list if you already have one
