--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -7,7 +7,7 @@ plugins:
   - jekyll-remote-theme
 
 url: "https://GinoAC.github.io"
-baseurl: "/GinoAC.github.io"
+baseurl: ""
 #remote_theme: pages-themes/slate@v0.2.0
 #plugins:
 #- jekyll-remote-theme # add this line to the plugins list if you already have one
