--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,5 +1,5 @@
-title: Gino's Site! 
-description: Test Test
+#title: Gino's Site! 
+#description: Test Test
 
 remote_theme: pages-themes/slate@v0.2.0
 
