--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,7 +1,7 @@
-#title: Gino's Site! 
+title: Gino's Site! 
 #description: Test Test
 
-remote_theme: pages-themes/slate@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0 #pages-themes/slate@v0.2.0
 
 plugins:
   - jekyll-remote-theme
