--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,5 +1,5 @@
 title: Gino's Site! 
-#description: Test Test
+tagline: Computer architecture, security, memory, uarch predictors, and random junk 
 
 remote_theme: pages-themes/midnight@v0.2.0 #pages-themes/slate@v0.2.0
 
