new nav, new title, bmm

--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,4 +1,4 @@
-title: Gino's Site! 
+title: Byte-Sized Business 
 tagline: Computer architecture, security, memory, uarch predictors, and random junk 
 
 remote_theme: pages-themes/midnight@v0.2.0 #pages-themes/slate@v0.2.0
